--- a/css_exam/exam-bingo.html
+++ b/css_exam/exam-bingo.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
   <style>
     table{
-      width: 100px;
+      width: 150px;
       border: 5px solid black;
       border-collapse: collapse;
       border-spacing: 0px;
       text-align: center;
+      font-family: 'Sunflower', sans-serif;
      }
      td {
        border: 1px solid black;
-       padding: 1px;
-  
      }
 
   </style>
@@ -24,6 +24,7 @@
 
 <body>
   <table>
+    
   <tr>
     <td>1</td><td>2</td><td>3</td><td>4</td><td>5</td>
   </tr>
