--- a/javascript_ex/ajax_youtube.html
+++ b/javascript_ex/ajax_youtube.html
@@ -6,7 +6,7 @@
         var xmlHttp = new XMLHttpRequest();
 
         function send() {   //AIzaSyDBdbHHZsyzClxlh6NVbYIl5a4Glo_Sr8o
-            var url = "https://www.googleapis.com/youtube/v3/search?part=snippet&key=AIzaSyDBdbHHZsyzClxlh6NVbYIl5a4Glo_Sr8o&q=onepiece&maxResults=50";
+            var url = "https://www.googleapis.com/youtube/v3/search?part=snippet&key=AIzaSyDBdbHHZsyzClxlh6NVbYIl5a4Glo_Sr8o&q=onepiece&maxResults=50&type=video";
             // 통신 상태에 따라 동작될 callback 함수 지정
             xmlHttp.onreadystatechange = callback; 
             // http메소드, 요청주소, 비동기/동기 여부
