--- a/javascript/click.html
+++ b/javascript/click.html
@@ -22,6 +22,7 @@
   <form>
     <input type="text" name="id" value="아이디1" onclick="fnClick(this)">
     <input type="text" name="id" value="아이디2">
+    sadgfgfg
   </form>
 </body>
 
