--- a/javascript/click.html
+++ b/javascript/click.html
@@ -22,7 +22,8 @@
   <form>
     <input type="text" name="id" value="아이디1" onclick="fnClick(this)">
     <input type="text" name="id" value="아이디2">
-    sadgfgfg
+    fcytcycygyygcycy
+    vyvyvygvygvygv
   </form>
 </body>
 
